@@ -151,6 +151,10 @@ Type.: Bug
 File.: Host
 Desc.: Fixed a bug in line counter: Conditional jump or move depends on uninitialised value
 
+Type.: Bug
+File.: Host
+Desc.: Fixed some checks in the parser of -m 111 = nsldaps, SSHA-1(Base64), Netscape LDAP SSHA
+
 * changes v2.00 -> v2.01:
 
 Type.: Bug
